--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       body {
         font-family: Arial, sans-serif;
         font-size: small;
-        background-color: #f0f0f0;
+        background-color: #2c3e50;
         margin: 0;
         padding: 15px;
       }
@@ -29,7 +29,7 @@
       }
       .link {
         text-decoration: none;
-        color: rgb(45, 45, 45);
+        color: #2c3e50;
         flex: 1;
         min-width: 250px;
         max-width: 250px;
@@ -37,7 +37,7 @@
 
       .item {
         margin-bottom: 5px;
-        border: 1px solid #242f24;
+        border: 1px solid #34495e;
         padding: 12px;
         border-radius: 10px;
         width: 250px;
@@ -49,21 +49,30 @@
         transition: transform 0.2s ease, box-shadow 0.2s ease;
         background: linear-gradient(
           135deg,
-          #f8f9fa 0%,
-          #e9ecef 50%,
-          #dee2e6 100%
+          #ecf0f1 0%,
+          #bdc3c7 50%,
+          #95a5a6 100%
         );
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+      }
+
+      .item:has(img) {
+        justify-content: space-between;
+      }
+
+      .item:not(:has(img)) {
+        justify-content: center;
+        text-align: center;
       }
 
       .item:hover {
         transform: translateY(-2px);
-        box-shadow: 0 6px 12px rgba(36, 47, 36, 0.15);
+        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4);
         background: linear-gradient(
           135deg,
           #ffffff 0%,
-          #f8f9fa 50%,
-          #e9ecef 100%
+          #ecf0f1 50%,
+          #bdc3c7 100%
         );
       }
 
@@ -80,19 +89,50 @@
         object-fit: contain;
         flex-shrink: 0;
       }
+
+      .alert {
+        padding: 15px;
+        margin: 10px 0;
+        border-radius: 5px;
+        text-align: center;
+      }
+
+      .alert-danger {
+        background-color: #f8d7da;
+        color: #721c24;
+        border: 1px solid #f1aeb5;
+      }
+
+      .alert-info {
+        background-color: #d1ecf1;
+        color: #0c5460;
+        border: 1px solid #b6d4ea;
+      }
     </style>
   </head>
 
   <body>
-    <div class="container">
+    <div class="container" id="container">
      
 
     <script>
       function getDataFromAPI() {
+        console.log("Iniciando obtención de datos...");
+        const container = document.getElementById("container");
+        if (container) {
+          container.innerHTML = '<div class="alert alert-info">Cargando datos...</div>';
+        }
+
         fetch(
           "https://script.google.com/macros/s/AKfycbz1J3i4tNhQoz5w7Uha6QQ8UnX1GUW__3_VtawRz2NAy5vM-zl59xwrRYZIJzEUoNnHMQ/exec?sheet=VEHICULOS"
         )
-          .then((response) => response.json())
+          .then((response) => {
+            console.log("Respuesta recibida:", response);
+            if (!response.ok) {
+              throw new Error(`HTTP error! status: ${response.status}`);
+            }
+            return response.json();
+          })
           .then((result) => {
             console.log("Data fetched:", result);
             renderTable(result);
@@ -100,9 +140,10 @@
           .catch((error) => {
             console.error("Error fetching data:", error);
             const container = document.getElementById("container");
-            if (container)
+            if (container) {
               container.innerHTML =
-                '<div class="alert alert-danger">Error al obtener datos</div>';
+                '<div class="alert alert-danger">Error al obtener datos: ' + error.message + '</div>';
+            }
           });
       }
 
@@ -125,21 +166,33 @@
           const link = document.createElement("a");
           link.className = "link";
           link.target = "_blank";
-          link.href = item.url;
+          link.href = item.url || "#";
 
           const itemDiv = document.createElement("div");
           itemDiv.className = "item";
 
           const title = document.createElement("h3");
-          title.textContent = item.nombre;
+          title.textContent = item.nombre || "Sin nombre";
 
-          const img = document.createElement("img");
-          img.className = "img-logo";
-          img.src = item.logo_url;
-          img.alt = item.nombre;
+          // Solo crear imagen si existe logo_url y no está vacío
+          if (item.logo_url && item.logo_url.trim() !== "") {
+            const img = document.createElement("img");
+            img.className = "img-logo";
+            img.src = item.logo_url;
+            img.alt = item.nombre || "Logo";
+            
+            // Ocultar imagen si falla al cargar
+            img.onerror = function() {
+              this.style.display = 'none';
+            };
 
-          itemDiv.appendChild(title);
-          itemDiv.appendChild(img);
+            itemDiv.appendChild(title);
+            itemDiv.appendChild(img);
+          } else {
+            // Solo título si no hay imagen
+            itemDiv.appendChild(title);
+          }
+
           link.appendChild(itemDiv);
           container.appendChild(link);
         });
