--- a/index.html
+++ b/index.html
@@ -108,10 +108,21 @@
         color: #0c5460;
         border: 1px solid #b6d4ea;
       }
+      .container-principal {
+        text-align: center;
+        margin-bottom: 20px;
+      }
+      .imagen-principal {
+        max-width: 100%;
+        height: auto;
+      }
     </style>
   </head>
 
   <body>
+    <div class="container-principal">
+      <img class="imagen-principal" src="https://lh3.googleusercontent.com/u/0/d/1rbl6OVs5uvVke5dXuRMhqqK7QdvH1CYS" alt="Verificación Vehicular Segura">
+    </div>
     <div class="container" id="container">
      
 
